# tool_arXiv-db

./: .gitignore  Makefile  README.md  pyproject.toml
arxiv_db/: db.py  main.py
scripts/: download.bash  json2jl.bash
src/: db.py  main.py
src-docs/: src.db.rst  src.rst
